--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Vanilla Bootstrap v4.2.1 Theme</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="height=device-height, initial-scale=1">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
