--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                     <div class="about-me-container rounded shadow">
                         <h4 class="p-4">Ik heb met mijn studie al veel ervaring opgedaan op verschillende gebieden van
                             software en programmeertalen. Ook vind ik het erg leuk om in mijn vrije tijd te
-                            experimenteren met nieuwe nieuwe dingen.
+                            experimenteren met nieuwe dingen.
                             Om een aantal talen en platformen te noemen waar ik ervaring mee heb: Java, C++, Android,
                             HTML,
                             CSS, Vue, React, Laravel, PHP en SQL.</h4>
