--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-md-5 p-2">
                     <div class="about-me-container rounded shadow">
                         <h4 class="p-4">Benieuwd naar voorbeelden van wat ik zoal gemaakt heb? Klik <a
-                                href="index.html" class="text-white">hier</a>
+                                href="portfolio.html" class="text-white">hier</a>
                             voor mijn portfolio!</h4>
                     </div>
                 </div>
