--- a/portfolio.html
+++ b/portfolio.html
@@ -22,7 +22,7 @@
 
 <body>
 <div class="skills-content parallax-content" id="portfolio">
-    <div class="ml-5 mr-5 row">
+    <div class="ml-5 mr-5 row h-100">
         <div class="col-12 p-5 w-100">
             <div class="d-flex flex-wrap justify-content-center">
                 <h1 class="display-4 pt-5 pb-5 flex-wrap">Mijn <span class="text-white">portfolio</span></h1>
@@ -37,80 +37,111 @@
         </div>
     </div>
 
-    <div class="parallax-content projects-content" id="">
-        <div class="container">
+    <div class="about-me-content" id="">
+        <div class="container p-5">
             <div class="row">
-                <div class="col-md-12">
+                <div class="col-md-4 about-me-container">
+                    <div class="pt-3 pb-3">
+                        <h1 class="display-4">Project <span class="text-white">TakeAway</span></h1>
+                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
+                        Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en omslachtig,
+                         waardoor veel medewerkers vaak de uren erg laat invulden.
+                        De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op, loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-8">
                     <div id="owl-testimonials" class="owl-carousel owl-theme">
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Awesome Note Book</h4>
-                                    <span>$18.00</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/takeaway1.jpg" data-lightbox="image-1"><img src="img/takeaway1.jpg"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Antique Decoration Photo</h4>
-                                    <span>$27.00</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/takeaway2.jpg" data-lightbox="image-1"><img src="img/takeaway2.jpg"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/3rd-big-item.jpg" data-lightbox="image-1"><img src="img/3rd-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Work Hand Bag</h4>
-                                    <span>$36.00</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/takeaway3.jpg" data-lightbox="image-1"><img src="img/takeaway3.jpg"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/4th-big-item.jpg" data-lightbox="image-1"><img src="img/4th-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Smart Watch</h4>
-                                    <span>$45.00</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/takeaway4.jpg" data-lightbox="image-1"><img src="img/takeaway4.jpg"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/5th-big-item.jpg" data-lightbox="image-1"><img src="img/5th-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>PC Tablet Draw</h4>
-                                    <span>$63.00</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/takeaway5.jpg" data-lightbox="image-1"><img src="img/takeaway5.jpg"
+                                                                                             alt=""></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="about-me-content">
+        <div class="container p-5">
+            <div class="row">
+                <div class="col-md-4 about-me-container">
+                    <div class="pt-3 pb-3">
+                        <h1 class="display-4">OVSoftware's  <span class="text-white">IJsbrekers</span></h1>
+                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
+                            Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en omslachtig,
+                            waardoor veel medewerkers vaak de uren erg laat invulden.
+                            De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op, loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-8">
+                    <div id="owl-" class="owl-carousel owl-theme">
+                        <div class="item">
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/ov1.PNG" data-lightbox="image-1"><img src="img/ov1.PNG"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/6th-big-item.jpg" data-lightbox="image-1"><img src="img/6th-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Healthy Milkshake</h4>
-                                    <span>$77.00</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/ov2.PNG" data-lightbox="image-1"><img src="img/ov2.PNG"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/2nd-big-item.jpg" data-lightbox="image-1"><img src="img/2nd-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Antique Decoration Photo</h4>
-                                    <span>$84.50</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/ov3.PNG" data-lightbox="image-1"><img src="img/ov3.PNG"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
                         <div class="item">
-                            <div class="testimonials-item">
-                                <a href="img/1st-big-item.jpg" data-lightbox="image-1"><img src="img/1st-item.jpg" alt=""></a>
-                                <div class="text-content">
-                                    <h4>Awesome Notes Book</h4>
-                                    <span>$96.75</span>
+                            <div class="card-body">
+                                <div class="testimonials-item">
+                                    <a href="img/ov4.PNG" data-lightbox="image-1"><img src="img/ov4.PNG"
+                                                                                             alt=""></a>
                                 </div>
                             </div>
                         </div>
@@ -128,7 +159,8 @@
                         <a href="#home">Back To Top</a>
                     </div>
                     <ul>
-                        <li><a href="https://www.facebook.com/emiel.dubbink" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="https://www.facebook.com/emiel.dubbink" target="_blank"><i
+                                class="fa fa-facebook"></i></a></li>
                         <li><a href="mailto:emieldubbink@hotmail.com"><i class="fa fa-envelope"></i></a></li>
                         <!--<li><a href="#"><i class="fa fa-twitter"></i></a></li>-->
                         <!--<li><a href="#"><i class="fa fa-linkedin"></i></a></li>-->
