--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                         </div>
                         <br>
                         <div class="about-me-container rounded shadow">
-                            <h4 class="p-4">Met mijn studie ben ik mezelf constant aan het ontwikkelen als Software
+                            <h4 class="p-4">Met mijn studie ben ik mezelf continu aan het ontwikkelen als Software
                                 Engineer, en heb ik inmiddels al
                                 een mooi lijstje aan skills.</h4>
                         </div>
@@ -90,7 +90,7 @@
                     <div class="about-me-container rounded shadow">
                         <h4 class="p-4">Ik heb met mijn studie al veel ervaring opgedaan op verschillende gebieden van
                             software en programmeertalen. Ook vind ik het erg leuk om in mijn vrije tijd te
-                            experimenteren met nieuwe nieuwe dingen.
+                            experimenteren met nieuwe dingen.
                             Om een aantal talen en platformen te noemen waar ik ervaring mee heb: Java, C++, Android,
                             HTML,
                             CSS, Vue, React, Laravel, PHP en SQL.</h4>
