--- a/portfolio.html
+++ b/portfolio.html
@@ -28,9 +28,6 @@
                 <h1 class="display-4 pt-5 pb-5 flex-wrap">Mijn <span class="text-white">portfolio</span></h1>
                 <div class="w-100"></div>
                 <div class="col-md-5 p-2">
-                    <div class="about-me-container rounded shadow">
-                        <h4 class="p-4">De afgelopen jaren heb ik met klasgenoten al meerdere projecten gedaan. </h4>
-                    </div>
 
                 </div>
             </div>
@@ -40,111 +37,111 @@
     <div class="about-me-content" id="">
         <div class="container p-5">
             <div class="row">
-                <div class="col-md-4 about-me-container">
+                <div class="col-md-8 about-me-container mb-5 mb-md-0">
                     <div class="pt-3 pb-3">
                         <h1 class="display-4">Project <span class="text-white">TakeAway</span></h1>
-                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
-                        Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en omslachtig,
-                         waardoor veel medewerkers vaak de uren erg laat invulden.
-                        De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op, loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
+                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor
+                            het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
+                            Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en
+                            gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en
+                            omslachtig,
+                            waardoor veel medewerkers vaak de uren erg laat invulden.
+                            De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op,
+                            loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
                         </p>
                     </div>
                 </div>
-                <div class="col-md-8">
-                    <div id="owl-testimonials" class="owl-carousel owl-theme">
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/takeaway1.jpg" data-lightbox="image-1"><img src="img/takeaway1.jpg"
-                                                                                             alt=""></a>
-                                </div>
+                <div class="col-md-4">
+                    <div id="carouselTakeAway" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="img/takeaway1.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/takeaway2.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/takeaway3.jpg" alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/takeaway4.jpg" alt="Fourth slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/takeaway5.jpg" alt="Fifth slide">
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/takeaway2.jpg" data-lightbox="image-1"><img src="img/takeaway2.jpg"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/takeaway3.jpg" data-lightbox="image-1"><img src="img/takeaway3.jpg"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/takeaway4.jpg" data-lightbox="image-1"><img src="img/takeaway4.jpg"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/takeaway5.jpg" data-lightbox="image-1"><img src="img/takeaway5.jpg"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselTakeAway" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselTakeAway" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="about-me-content">
+    <div class="skills-content">
         <div class="container p-5">
             <div class="row">
-                <div class="col-md-4 about-me-container">
+                <div class="col-md-4 about-me-container mb-5 mb-md-0">
                     <div class="pt-3 pb-3">
-                        <h1 class="display-4">OVSoftware's  <span class="text-white">IJsbrekers</span></h1>
-                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
-                            Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en omslachtig,
+                        <h1 class="display-4">OVSoftware's <span class="text-white">IJsbrekers</span></h1>
+                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor
+                            het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
+                            Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en
+                            gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en
+                            omslachtig,
                             waardoor veel medewerkers vaak de uren erg laat invulden.
-                            De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op, loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
+                            De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op,
+                            loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
                         </p>
                     </div>
                 </div>
                 <div class="col-md-8">
-                    <div id="owl-" class="owl-carousel owl-theme">
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/ov1.PNG" data-lightbox="image-1"><img src="img/ov1.PNG"
-                                                                                             alt=""></a>
-                                </div>
+                    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img class="d-block w-100" src="img/ov11.jpg" alt="First slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/ov22.jpg" alt="Second slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/ov33.jpg" alt="Third slide">
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="img/ov4.jpg" alt="Fourth slide">
                             </div>
                         </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/ov2.PNG" data-lightbox="image-1"><img src="img/ov2.PNG"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/ov3.PNG" data-lightbox="image-1"><img src="img/ov3.PNG"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="item">
-                            <div class="card-body">
-                                <div class="testimonials-item">
-                                    <a href="img/ov4.PNG" data-lightbox="image-1"><img src="img/ov4.PNG"
-                                                                                             alt=""></a>
-                                </div>
-                            </div>
-                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -156,7 +153,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="primary-button">
-                        <a href="#home">Back To Top</a>
+                        <a href="#portfolio">Back To Top</a>
                     </div>
                     <ul>
                         <li><a href="https://www.facebook.com/emiel.dubbink" target="_blank"><i
