ijsbreker beschrijving toegevoegd

--- a/portfolio.html
+++ b/portfolio.html
@@ -99,14 +99,11 @@
                 <div class="col-md-4 about-me-container mb-5 mb-md-0">
                     <div class="pt-3 pb-3">
                         <h1 class="display-4">OVSoftware's <span class="text-white">IJsbrekers</span></h1>
-                        <p class="h4">In het eerste kwartiel van dit schooljaar hebben wij een project mogen doen voor
-                            het bedrijf TakeAway, ook wel bekend als Thuisbezogd.nl. Onze opdracht was om een
-                            Android app te bouwen waarmee medewerkers van Thuisbezorgd hun urenregistratie beter en
-                            gemakkelijker bij kunnen houden. Het systeem waar ze mee werkten was verouderd en
-                            omslachtig,
-                            waardoor veel medewerkers vaak de uren erg laat invulden.
-                            De app die wij gemaakt hebben bood hiervoor een oplossing. Medewerkers starten de app op,
-                            loggen in via een Google account, en kunnen met een paar klikken hun uren invullen.
+                        <p class="h4">Op dit moment werken we aan een project voor het bedrijf OVSoftware. De opdracht was om een platform te maken
+                            waar gebruikers met elkaar een soort spelletjes kunnen spelen. Hierbij moet een vorm van een sessiesysteem komen waar de organisator
+                            van een sessie een kamercode krijgt, zodat andere gebruikers met die code de kamer kunnen joinen en spelletjes kunnen spelen.<br>
+                            <br>
+                            De website is gemaakt met een Vue.js front-end, een Node.js back-end, en een combinatie van REST calls en socket verbindingen.
                         </p>
                     </div>
                 </div>
